# pytorch_lite

./: .gitignore  .metadata  CHANGELOG.md  LICENSE  README.md  ffigen.yaml  generate_bindings.sh  generate_piegon.sh  pubspec.yaml
.github/workflows/: build_cross_platform.yml  integration_tests.yml  publish.yml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/com/abdelaziz_mahdy/pytorch_lite/: Convert.java  Pigeon.java  PrePostProcessor.java  PytorchLitePlugin.java
android/src/main/java/com/zezo357/pytorch_lite/: Convert.java  Pigeon.java  PrePostProcessor.java  PrePostProcessorYolov8.java  PytorchLitePlugin.java
android/src/main/java/com/zezo789/pytorch_lite/: Convert.java  Pigeon.java  PrePostProcessor.java  PytorchLitePlugin.java
android/src/main/kotlin/com/zezo357/pytorch_lite/: PytorchLitePlugin.kt
android/src/test/java/com/abdelaziz_mahdy/pytorch_lite/: PytorchLitePluginTest.java
android/src/test/java/com/zezo357/pytorch_lite/: PytorchLitePluginTest.java
android/src/test/kotlin/com/zezo357/pytorch_lite/: PytorchLitePluginTest.kt
example/: .gitignore  README.md  clean.sh  pubspec.yaml  runTest.sh
example/android/: build.gradle  settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/abdelaziz_mahdy/pytorch_lite_example/: MainActivity.java
example/android/app/src/main/java/com/zezo357/pytorch_lite_example/: MainActivity.java
example/android/app/src/main/java/com/zezo789/pytorch_lite_example/: MainActivity.java
example/android/app/src/main/kotlin/com/example/pytorch_lite_example/: MainActivity.kt
example/android/app/src/main/kotlin/com/zezo357/pytorch_lite_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/android/gradle/wrapper/: gradle-wrapper.properties
example/assets/labels/: labels_modelinho.txt
example/integration_test/: data.dart  plugin_integration_test.dart  utils.dart
example/ios/: Podfile  pytorch_ffi.cpp
example/ios/Flutter/: AppFrameworkInfo.plist
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.m  RunnerTests.swift
example/lib/: RunModelByCameraDemo.dart  RunModelByImageDemo.dart  main.dart  run_model_by_camera_demo.dart  run_model_by_image_demo.dart  run_model_by_image_picker_camera_demo.dart
example/lib/ui/: box_widget.dart  camera_view.dart  camera_view_singleton.dart
example/lib/utils/: image_utils.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/ephemeral/.plugin_symlinks/: file_selector_linux  image_picker_linux  path_provider_linux
example/macos/Flutter/ephemeral/: Flutter-Generated.xcconfig  flutter_export_environment.sh
example/macos/Flutter/ephemeral/.symlinks/plugins/: file_selector_macos  path_provider_foundation
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/test_driver/: perf_driver.dart
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
ios/: pytorch_lite.podspec
ios/Classes/: PrePostProcessor.h  PrePostProcessor.m  PrePostProcessor.mm  PytorchLitePlugin.h  PytorchLitePlugin.m  PytorchLitePlugin.mm  PytorchLitePlugin.swift  SwiftPytorchLitePlugin.swift  pigeon.h  pigeon.m  pigeon.mm  pytorch_ffi.cpp  pytorch_ffi.h  pytorch_lite.cpp
ios/Classes/Helpers/: UIImageExtension.m
lib/: generated_bindings.dart  image_utils.dart  image_utils_isolate.dart  lib.dart  native_locator.dart  native_wrapper.dart  pigeon.dart  post_processor.dart  pytorch_lite.dart  pytorch_lite_method_channel.dart  pytorch_lite_platform_interface.dart  utils.dart
lib/classes/: rect.dart  result_object_detection.dart
lib/enums/: enums.dart  model_type.dart
lib/extensions/: to_map_json.dart
linux/: CMakeLists.txt
macos/: pytorch_lite.podspec
macos/Classes/: pytorch_lite.c
pigeons/: messages.dart
src/: CMakeLists.txt  pytorch_lite.cpp  pytorch_lite.h
test/: pytorch_lite_method_channel_test.dart  pytorch_lite_test.dart
windows/: CMakeLists.txt
